# libretexts-mcp

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
src/libretexts_mcp/: client.py  server.py
