[project]
name = "libretexts-mcp"
version = "0.1.0"
description = "MCP server for LibreTexts (physics, math, chem, engineering) — built for self-study"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "markdownify>=0.11",
]

[project.scripts]
libretexts-mcp = "libretexts_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libretexts_mcp"]
